client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Metamorphous&family=Ysabeau+Office:ital,wght@0,1..1000;1,1..1000&display=swap');

.metamorphous-regular {
  font-family: "Metamorphous", serif;
  font-weight: 400;
  font-style: normal;
}

.ysabeau-office {
  font-family: "Ysabeau Office", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

:root {
  font-family: "Ysabeau Office", "Metamorphous", system-ui;
  line-height: 1;
  font-weight: 600;

  color-scheme: light dark;
  color: #2d3c26;
  background-color: #f4f1e1;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Metamorphous", serif;
}

